[gd_scene load_steps=16 format=3 uid="uid://d0lktis282tns"]

[ext_resource type="Script" path="res://scripts/game.gd" id="1_8u3hw"]
[ext_resource type="Script" path="res://scripts/GameCamera.gd" id="2_os0r1"]
[ext_resource type="PackedScene" uid="uid://du1qxx0rk1e2r" path="res://scenes/escape.tscn" id="3_xj2tw"]
[ext_resource type="Texture2D" uid="uid://hemdtby0vuhu" path="res://ressources/afterclosestbg.png" id="4_7o5w1"]
[ext_resource type="Texture2D" uid="uid://d34kxbno2qf13" path="res://ressources/closestbg.png" id="5_lwvip"]
[ext_resource type="Texture2D" uid="uid://cn5l7i5mbcoox" path="res://ressources/beforclosestbg.png" id="6_nsk4w"]
[ext_resource type="Script" path="res://scripts/BeatMover.gd" id="7_s7eho"]
[ext_resource type="AudioStream" uid="uid://8w8xjtad02lv" path="res://ressources/sandstorm.mp3" id="8_s6bv0"]
[ext_resource type="Texture2D" uid="uid://cmj7asdv4yrwt" path="res://ressources/icon.svg" id="9_0qtax"]
[ext_resource type="PackedScene" uid="uid://dl2f8lc6amcyk" path="res://scenes/Player.tscn" id="10_omap5"]
[ext_resource type="Script" path="res://scripts/PlayerLevelManager.gd" id="11_ucq5w"]

[sub_resource type="Animation" id="Animation_4yrad"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_xx2ys"]
resource_name = "zoom_effect"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:zoom")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.01, 1.01), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_051g4"]
_data = {
"RESET": SubResource("Animation_4yrad"),
"zoom_effect": SubResource("Animation_xx2ys")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2rsd1"]
size = Vector2(1013, 46)

[node name="BaseLevel" type="Node2D"]
script = ExtResource("1_8u3hw")

[node name="GameCamera" type="Camera2D" parent="."]
script = ExtResource("2_os0r1")

[node name="EscMenu" parent="GameCamera" instance=ExtResource("3_xj2tw")]
visible = false
z_index = 2

[node name="zoom_effect" type="AnimationPlayer" parent="GameCamera"]
libraries = {
"": SubResource("AnimationLibrary_051g4")
}
speed_scale = 3.5

[node name="Background1" type="Sprite2D" parent="GameCamera"]
z_index = -5
position = Vector2(0, -849)
scale = Vector2(1.145, 1.145)

[node name="Background2" type="Sprite2D" parent="GameCamera"]
z_index = -4
position = Vector2(0, -1998)
scale = Vector2(1.145, 1.145)
texture = ExtResource("4_7o5w1")

[node name="Background3" type="Sprite2D" parent="GameCamera"]
z_index = -3
position = Vector2(0, -4304)
scale = Vector2(1.145, 1.145)
texture = ExtResource("5_lwvip")

[node name="Background4" type="Sprite2D" parent="GameCamera"]
z_index = -2
position = Vector2(0, -8949)
scale = Vector2(1.145, 1.145)
texture = ExtResource("6_nsk4w")

[node name="BeatMover" type="Node" parent="."]
script = ExtResource("7_s7eho")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_s6bv0")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(4, 305)
collision_layer = 4
collision_mask = 2
metadata/_edit_group_ = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(0.5, -1)
shape = SubResource("RectangleShape2D_2rsd1")

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
position = Vector2(-3.49998, -3)
scale = Vector2(7.85156, 0.375)
texture = ExtResource("9_0qtax")

[node name="Player" parent="." instance=ExtResource("10_omap5")]
position = Vector2(285, 258)
scale = Vector2(0.255, 0.255)
speed = 400

[node name="LvlManager" type="Node2D" parent="."]
script = ExtResource("11_ucq5w")
